# xtb-client

./: .gitignore
client/: Cargo.toml  LICENSE  README.md
client/examples/: .env.example  get_all_symbols.rs  stream_keep_alive.rs
client/src/: client.rs  connection.rs  lib.rs  listener.rs  message_processing.rs  stream_connection.rs
client/src/api/: api_errors.rs  data.rs  enums.rs  messages.rs  mod.rs  test_payloads.rs
client/src/schema/: api_errors.rs  commands.rs  data.rs  enums.rs  messages.rs  mod.rs  test_payloads.rs
