[package]
name = "xtb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "^1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
derive_setters = "0.1.6"
serde_json = "^1.0.114"
serde_repr = "^0.1.18"
rust_decimal = { version = "^1.34.3", features = ["serde_json", "serde-float"] }

[dev-dependencies]
rstest = "^0.18.2"
rstest_reuse = "^0.6.0"
