[package]
name = "xtb-client"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of XTB Broker API connector"
keywords = ["xtb", "fintech", "xstation", "trading"]
license = "MIT"
repository = "https://github.com/elmordo/xtb-client"
authors = ["Petr Jindra"]
categories = ["api-bindings", "finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
thiserror = "^1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
derive_setters = "0.1.6"
serde_json = "^1.0.114"
serde_repr = "^0.1.18"
serde_with = "^3.6.1"
rust_decimal = { version = "^1.34.3", features = ["serde_json", "serde-float"] }
tokio = { version = "^1.36.0", features = ["rt", "sync", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tokio-tungstenite = { version = "^0.21.0", features = ["rustls-tls-native-roots"] }
url = "^2.5.0"
futures-util = "^0.3.30"
log = "0.4.21"

[dev-dependencies]
rstest = "^0.18.2"
rstest_reuse = "^0.6.0"
tokio = { version = "^1.36.0", features = ["full", "test-util"] }
dotenvy = "^0.15.7"
tracing-subscriber = "^0.3.18"
